# ChotoVai

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SETUP.md  bridge.py  install.ps1  install.sh  pyproject.toml  startup.ps1
data/: kuzu_db
fine_tuning/scripts/: eval_specialist.py  prepare_coder_data.py  prepare_critic_data.py  prepare_tester_data.py  train_lora.py
infra/: docker-compose.yml
presets/: lmstudio.env  ollama.env
presets/azure_openai/: azure_openai.env  config.md
presets/lmstudio/: config.md  lmstudio.env
presets/ollama/: config.md  lmstudio.env  ollama-old.env  ollama.env
presets/openrouter/: config.md  openrouter.env
presets/vllm/: config.md  vllm.env
src/agents/: base.py  coder.py  critic.py  explorer.py  refactorer.py  summarizer.py  tester.py
src/cli/: main.py  setup.py
src/core/: config.py  schemas.py  tracing.py
src/fine_tuning/: debate_collector.py  imagine_trainer.py
src/memory/: context_assembler.py  contracts.py  episodic.py  plan_state.py  recursive_summarizer.py  scratchpad.py  scratchpad_janitor.py  working.py
src/orchestrator/: cognitive_router.py  debate_graph.py  escalation.py  fsm.py  intent_reasoner.py  node_decomposer.py  planner.py  router.py  task_router.py
src/protocols/: mcp_client.py
src/repo_intel/: community.py  graph_builder.py  graph_rag.py  graph_store.py  indexer.py  parser.py  pasted_code_stubber.py  rlm.py  stub_extractor.py  symbol_slicer.py
src/serving/: model_registry.py  vllm_client.py
src/validators/: agentic.py  best_of_n.py  deterministic.py
tests/unit/: test_base_agent_plain_text_final.py  test_context_prefetcher.py  test_contracts_only_externality.py  test_debate_system.py  test_scratchpad_janitor.py  test_symbol_slicer.py  test_task_router_prefetch.py  test_tools_robustness.py
tools/: _net_safety.py  code_graph.py  contracts_update.py  git_tools.py  grep.py  patch_file.py  pr_tools.py  read_file.py  read_scratchpad.py  run_tests.py  scratchpad_append.py  shell.py  verify_repo.py  web_fetch.py  web_search.py  write_file.py
