[project]
name = "slm-agent"
version = "0.1.0"
description = "SLM-First Coding Agent System — hierarchical multi-agent scaffold for code tasks"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Model serving
    "openai>=1.30.0",             # OpenAI-compatible client (vLLM, Ollama, OpenRouter)

    # Structured output / guided decoding
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Orchestration
    "langgraph>=0.2.0",

    # Memory — vector store
    "qdrant-client>=1.10.0",

    # Memory — relational / state
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.0",

    # Code graph — AST parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",

    # Code graph — embedded graph DB
    "neo4j>=5.25.0",

    # Embeddings
    "sentence-transformers>=3.1.0",

    # Tracing / observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "langfuse>=2.40.0",

    # HTTP / async
    "httpx>=0.27.0",
    "anyio>=4.4.0",

    # CLI / TUI
    "rich>=13.7.0",
    "typer>=0.12.0",

    # Utilities
    "tenacity>=8.4.0",           # Retry logic
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "tiktoken>=0.7.0",           # Token counting
]

[project.optional-dependencies]
fine-tune = [
    "unsloth>=2024.12.0",
    "trl>=0.9.0",
    "peft>=0.12.0",
    "datasets>=2.20.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
]
eval = [
    "human-eval>=1.0.3",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
slm-agent = "src.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
